Ajout d'une image de plusieurs OS

--- a/presentation.tex
+++ b/presentation.tex
@@ -71,20 +71,9 @@
 	\subsection{Systéme d'exploitation}
 	\begin{frame}
 		\frametitle{Les systéme d'exploitation : OS (Operating System)}
-		\begin{columns}
-			\begin{column}[l]{5cm}
-				\begin{block}{Chef d'orchestre}
-					\begin{itemize}
-						\item Windows : XP, Vista, 7, 8.
-						\item Linux : Debian Ubuntu
-						\item Mac : Mac OS, Mac OS X
-					\end{itemize}
-				\end{block}
-			\end{column}
-			\begin{column}[l]{5cm}
-				\includegraphics[scale=0.25]{image/OS.png}
-			\end{column}
-		\end{columns}
+		\begin{figure}
+				\includegraphics[scale=0.55]{image/OSimage.png}
+			\end{figure}
 	\end{frame}
 
 	\subsection{Types de mémoires}
