--- a/TD/exo/calculette.tex
+++ b/TD/exo/calculette.tex
@@ -1,8 +1,16 @@
 \section{Utilisation de R comme calculatrice avec objet simple}
-
 \paragraph{Objectif : } Comprendre le concept de variable, stockage d'une valeur dans une variable, calcul simple, variable prédéfinie. Connaitre quelques symboles particuliers. Utiliser l'auto-complétion et l'historique.
 \subsection{Exercice : calcul simple avec les variables}
 Le symbole $>$ en début de ligne (chevron), permet d'indiquer une ligne de commande : il n'est pas à recopier. \\
 Le symbole \# permet d'indiquer que la ligne est un commentaire. Cette ligne est là comme information pour l'utilisateur et n'est pas interprétée par R.
 Tester dans la console ces différents exemples :
-\lstinputlisting{../../formationR/calculsimple.R}
+\lstinputlisting{code/calculsimple.R}
+\lstinputlisting{code/vecteur.R}
+
+\paragraph{Ce qu'il faut retenir}
+Comment stocker une variable
+L'importance de la casse
+utiliser l'auto-completion
+Chaine de caractere entre guillement
+
+
