--- a/TD/exo/fonction.tex
+++ b/TD/exo/fonction.tex
@@ -4,4 +4,4 @@ Les fonctions se terminent par des parenthèses. Elles retournent un résultat q
 Le résultat de la fonction peut être stocké dans un objet pour être utilisé par la suite.
 A l'intérieur des parenthèses, la fonction peut comporter des arguments séparés par des virgules.
 
-\lstinputlisting{../../formationR/fonctionTP.R}
+\lstinputlisting{code/fonctionTP.R}
