--- a/TD/exo/matrice.tex
+++ b/TD/exo/matrice.tex
@@ -3,4 +3,4 @@
 Les matrices (matrix) sont des objets assimilés à des tableaux, leur contenu est uniquement numérique.
 La fonction read.delim est identique à read.table mais certains arguments n'ont pas les mêmes valeurs par défaut. (Si vous regardez la documentation de read.delim vous remarquerez qu'il s'agit de la même que read.table)
 
-\lstinputlisting{../../formationR/matrice.R}
+\lstinputlisting{code/matrice.R}
