--- a/TD/exo/script.tex
+++ b/TD/exo/script.tex
@@ -1,4 +1,4 @@
-\section{Éxecuter un script}
+\section{Script}
 \paragraph{Differentes methodes pour executer un script}
 Ouvrir le fichier ‘scriptTuto.R'.
 \paragraph{Pas à pas :}
