--- a/TD/exo/vecteur.tex
+++ b/TD/exo/vecteur.tex
@@ -2,4 +2,4 @@
 Un vecteur est un objet qui contient plusieurs éléments.
 \paragraph{Objectif : }Savoir créer un vecteur,  comprendre le comportement d'une opération de vecteur. Accéder à une valeur particulière
 \subsection{Exercice : operations sur les vecteurs}
-\lstinputlisting{../../formationR/vecteur.R}
+\lstinputlisting{code/vecteur.R}
