--- a/TD/guideFormatio.tex
+++ b/TD/guideFormatio.tex
@@ -61,20 +61,13 @@ literate={é}{{\'e}}1
 \begin{document}
 
 \input{exo/envRstudio.tex}
-\input{exo/calculette.tex}
-\input{exo/vecteur.tex}
-\input{exo/fonction.tex}
-\input{exo/matrice.tex}
-\input{exo/graph.tex}
-\input{exo/debug.tex}
+\input{exo/premierspas.tex}
+\input{exo/notionspratique.tex}
+\input{exo/importExport.tex}
+\input{exo/graphique.tex}
 \input{exo/script.tex}
 \input{exo/writeFunction.tex}
-\input{exo/library.tex}
-\input{exo/factor.tex}
-
-
-
-
+\input{exo/package.tex}
 
 
 \end{document}
