--- a/TD/exo/debug.tex
+++ b/TD/exo/debug.tex
@@ -1,7 +1,7 @@
 
 \section{Jeu des 5 erreurs : le débuggage}
 
-%\lstinputlisting{../../formationR/bugTuto.R}
+%\lstinputlisting{code/bugTuto.R}
 Le debuggage occupe une part non négligeable du temps pour l'utilateur de R. Avec l'experience, les erreurs se repèrent et se corrigent plus rapidement.
 \paragraph{Objectif }: Analyser des messages d'erreurs fréquent et les corriger. 
 \paragraph{But} : Corriger la ligne de commande afin de ne plus avoir de message d'erreur.
