--- a/TD/exo/graph.tex
+++ b/TD/exo/graph.tex
@@ -1,4 +1,4 @@
 \section{Graphiques}
 \paragraph{Objectifs}: savoir utiliser des fonctions graphiques simples, savoir sauvegarder une image.
 
-\lstinputlisting{../../formationR/graph.R}
+\lstinputlisting{code/graph.R}
