--- a/TD/exo/envRstudio.tex
+++ b/TD/exo/envRstudio.tex
@@ -1,5 +1,5 @@
 \section{L'environement RStudio}
-\input{exo/project.tex}
+%\input{exo/project.tex}
 
 \subsection{Éléments de RStudio}
 Présentation des différentes fenêtres de RStudio et personnalisation.\\
