--- a/TD/exo/importExport.tex
+++ b/TD/exo/importExport.tex
@@ -1,2 +1,5 @@
-\section{Import Export}
+\section{Erreurs, importer exporter des données}
+\subsection{5 erreurs courrantes}
+\lstinputlisting{code/bugTuto.R}
+\subsection{Importer et exporter des données}
 \lstinputlisting{code/matrice.R}
