--- a/TD/exo/premierspas.tex
+++ b/TD/exo/premierspas.tex
@@ -1,7 +1,7 @@
 \section{Premiers Pas}
 \subsection{R est une calculette}
 \lstinputlisting{code/calculsimple.R}
-\subsection{Créer des objets et s'informer}
+\subsection{Créer des objets et les utiliser}
 \subsubsection{Vecteurs}
 \lstinputlisting{code/vecteur.R}
 \subsubsection{Matrices et data frame}
