--- a/TD/guideFormatio.tex
+++ b/TD/guideFormatio.tex
@@ -62,12 +62,12 @@ literate={é}{{\'e}}1
 
 \input{exo/envRstudio.tex}
 \input{exo/premierspas.tex}
-\input{exo/notionspratique.tex}
+%\input{exo/notionspratique.tex}
 \input{exo/importExport.tex}
 \input{exo/graphique.tex}
-\input{exo/script.tex}
+%\input{exo/script.tex}
 \input{exo/writeFunction.tex}
-\input{exo/package.tex}
+%\input{exo/package.tex}
 
 
 \end{document}
