Formation à blanc final

--- a/Presentation/presentation.tex
+++ b/Presentation/presentation.tex
@@ -11,7 +11,7 @@
 \title{Formation à blanc \\Initiation R}
 %---------------Date à remplir ou commenter pour date du jour-------------%
 \institute{BiRD}
-\date{3 septembre 2013}
+\date{2 septembre 2013}
 \logo{\includegraphics[height=10mm]{image/logo.jpg}}
 %--------Rédacteur------------%
 \author{\textsc{E.Hirchaud\\ F.Simonet}}
@@ -107,9 +107,9 @@ literate={é}{{\'e}}1
 
 \section{Notions informatiques}
 
-\subsection{Systéme d'exploitation}
+\subsection{Systèmes d'exploitation}
 \begin{frame}
-	\frametitle{Les systéme d'exploitation : OS (Operating System)}
+	\frametitle{Les systèmes d'exploitation : OS (Operating System)}
 	\begin{figure}
 		\includegraphics[scale=0.55]{image/OSimage.png}
 	\end{figure}
@@ -130,9 +130,9 @@ literate={é}{{\'e}}1
 \subsection{Chemins et fichiers}
 \begin{frame}
 	\frametitle{Arborescence}
-	\begin{block}{Appélation}
+	\begin{block}{Appellation}
 		\begin{itemize}
-			\item Fichiers données numeriques de type variés
+			\item Fichiers : Données numeriques
 			\item Directory = Répertoire = Dossier : contient des fichiers.
 		\end{itemize}
 	\end{block}
@@ -180,7 +180,7 @@ literate={é}{{\'e}}1
 			\begin{column}[r]{5cm}
 				\begin{block}{Chemin absolu}
 					\begin{itemize}
-						\item A partir de la racine 
+						\item À partir de la racine 
 						\item Root/D1/D3/D5/D6/F1.txt
 					\end{itemize}
 				\end{block}
@@ -259,11 +259,11 @@ literate={é}{{\'e}}1
 \subsection{Aperçu}
 
 \begin{frame}
-	\frametitle{R : Apperçu}
+	\frametitle{R : Aperçu}
 	\begin{center}
 		\begin{block}{}
 			\begin{itemize}
-				\item Crée par Ross Ihaka et Robert Gentleman (1996)
+				\item Créé par Ross Ihaka et Robert Gentleman (1996)
 				\item C'est un logiciel libre et gratuit
 				\item Disponible sur les systèmes d'exploitation les plus utilisés
 				\item Utilisé dans de nombreux domaines dont la bio analyse.
@@ -332,7 +332,7 @@ literate={é}{{\'e}}1
 		\item Les valeurs ont un type : 
 			\begin{itemize}
 				\item numérique : 1,2, 3.14
-				\item chaine de caratères : A,B genes
+				\item chaîne de caratères : A,B genes
 				\item logique : TRUE/FALSE
 			\end{itemize}
 	\end{itemize}
@@ -363,9 +363,9 @@ literate={é}{{\'e}}1
 \begin{frame}
 	\setbeamercovered{dynamic}
 	\frametitle{Acceder aux valeurs}
-	\begin{exampleblock}{Notion d'indices index}
+	\begin{exampleblock}{Notion d'indices ou index}
 		\begin{itemize}
-			\item Les indices sont entouré de crochets 
+			\item Les indices sont entourés de crochets 
 			\item Il s'agit de la position d'une valeur
 			\item Pour les vecteurs, simple indice. $[i]$
 			\item Pour les data.frame et matrice, double indice, $[Ligne, Colone]$
@@ -447,7 +447,6 @@ literate={é}{{\'e}}1
 			\item Des arguments, paramétres
 			\item Retourne un ou des résultats
 			\item Créent, modifient et informent sur les données
-			\item Contiennent des arguments et des instructions
 		\end{itemize}
 	\end{center}
 \end{frame}
@@ -458,9 +457,9 @@ literate={é}{{\'e}}1
 	Une fonction c'est une recette de cuisine : La recette de la pâte à pizza
 	\begin{exampleblock}{La pate à pizza  : ingredients}
 		\begin{itemize}
-			\item 500g de farine
-			\item 250ml d'eau
-			\item 20g de levure de boulanger fraîche
+			\item 500 g de farine
+			\item 250 ml d'eau
+			\item 20 g de levure de boulanger fraîche
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -552,7 +551,7 @@ literate={é}{{\'e}}1
 			\end{itemize}
 		\item Informatique anglo-saxone
 			\begin{itemize}
-				\item Ne pas nommer les noms des objets avec des acents 
+				\item Ne pas nommer les noms des objets avec des accents 
 				\item Le point sert de décimal, la virgule non !
 			\end{itemize}
 		\item Ne JAMAIS mettre d'espace dans un nom  
@@ -562,7 +561,7 @@ literate={é}{{\'e}}1
 	\end{itemize}
 \end{frame}
 \begin{frame}
-	\frametitle{Synthése}
+	\frametitle{Synthèse}
 	\begin{center}
 	\include{syntheseR}
 \end{center}
