--- a/TD/exo/writeFunction.tex
+++ b/TD/exo/writeFunction.tex
@@ -3,7 +3,8 @@
 Il est plus facile d'écrire les fonctions dans des fichiers. Créer un nouveau fichier et le nommer fonction.R
 La synthaxe pour écrire une fonction est la suivante : 
 \lstinputlisting{code/synthaxefunction.R}
-\paragraph{Ennoncé} : Créer la fonction \emph{ingredientsPateAPizza} qui prend comme argument le nombre de pizza, par défaut 1. Elle doit retourner un vecteur indiquant les quantités pour les ingrédient.\par
+\paragraph{Ennoncé} : Créer la fonction \emph{ingredientsPateAPizza} qui prend comme argument le nombre de pizza, par défaut 1. Et retourne un vecteur avec les quantités pour X pizzas. : 
+\lstinputlisting{code/retour.R}
 Les ingrédients pour une pizza
 \begin{itemize}
 	\item farine : 500
